brat/test/golden/error/varnotfound.brat.golden
Error in test/golden/error/varnotfound.brat@2:8
f(x) = g(x)
       ^

  g not found in (value) environment

